[package]
name = "crust"
version = "0.1.0"
authors = ["Christopher Pence <chris@pencels.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
bumpalo = "3.7.0"
tempfile = "3.2.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
lookahead = "0.1.0"
codespan-reporting = "0.11.1"
codespan-derive = { git = "https://github.com/compiler-errors/codespan-derive", branch = "trunk" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0", "llvm16-0-prefer-dynamic"] }
structopt = "0.1.7"
structopt-derive = "0.1.0"
